<resources>

    <string name="app_name">NUS SOC Print</string>

    <string-array name="printer_name">
        <item>psts</item>
        <item>psts-sx</item>
        <item>pstsb</item>
        <item>pstsb-sx</item>
        <item>pstsc</item>
        <item>pstsc-sx</item>
        <item>psc008</item>
        <item>psc008-sx</item>
        <item>psc011</item>
        <item>psc011-sx</item>
        <item>psc245</item>
        <item>psc245-sx</item>
        
    </string-array>
    <string-array name="pagesForM1">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="pagesForM2">
        <item>1</item>
        <item>2</item>
        <item>4</item>
        <item>8</item>
    </string-array>
    <string-array name="pagesForM3">
        <item>Use cols x rows</item>
        <item>2</item>
        <item>4</item>
        <item>6</item>
        <item>9</item>
        <item>16</item>
    </string-array>

    <string name="nup_pdf_filename">nup_pdf.jar</string>
    <string name="nup_pdf_md5">C1F8FF3F9DE7B2D2A2B41FBC0085888B</string>
    <string name="multivalent_filename">Multivalent.jar</string>
    <string name="multivalent_md5">813BB651A1CC6EA230F28AAC47F78051</string>
    <string name="docs_to_pdf_filename">docs-to-pdf-converter-1.7.jar</string>
    <string name="docs_to_pdf_md5">1FC140AD8074E333F9082300F4EA38DC</string>
    <string name="server_wget_command_with_url">wget -N http://www.comp.nus.edu.sg/~yeokm1/nus-soc-print-tools/%1$s -P %2$s</string>
    <string name="server_uploading_file_progress">Uploading %1$s, %2$s of %3$s transferred</string>
    <string name="server_uploading_file">Uploading file&#8230;</string>
    <string name="server_checking_if_need_to_upload">Checking if need to retrieve %1$s</string>
    <string name="server_converting_to_ps">Converting to Postscript using: %1$s (this could take awhile)</string>
    <string name="server_converting_to_pdf">Converting to PDF using: %1$s (this could take awhile)</string>
    <string name="server_converting_to_pdf_error">Error converting to PDF</string>
    <string name="server_formatting_pdf">Formatting PDF using: %1$s</string>
    <string name="server_download_error_now_uploading_from_app">Download Error. Now Uploading %1$s from app</string>
    <string name="server_download_fail_docs_to_pdf_converter">Unable to download docs-to-pdf-converter.jar, cannot proceed with printing non-PDF document.</string>
    <string name="select_file_to_print">Choose document to print</string>
    <string name="default_username">Enter your UNIX username</string>
    <string name="default_password">Enter your UNIX password</string>
    <string name="default_printer">Enter your custom printer here</string>
    <string name="username_preference">username_preference</string>
    <string name="password_preference">password_preference</string>
    <string name="custom_printer_preference">custom_printer_preference</string>
    <string name="custom_server_preference">custom_server_preference</string>
    <string name="preference_reset_unix_password_link_title">Forgot your Unix credentials?</string>
    <string name="preference_reset_unix_password_link_summary">Click here to reset your password. Enter your NUSNET credentials at the site. Then choose Reset Password on the left banner.</string>
    <string name="preference_reset_unix_password_link_key">forgot_password_link</string>
    <string name="reset_unix_password_link">https://mysoc.nus.edu.sg/~myacct/</string>
    <string name="server_IP">sunfire.comp.nus.edu.sg</string>
    <string name="server_temp_dir">socPrint</string>
    <string name="credentials_not_set_dialog_text">You have not specified your Unix username or password in this app, enter them in the Settings page.</string>
    <string name="credentials_not_set_dialog_close_button">Close</string>
   
    <string name="quota_url">https://mysoc.nus.edu.sg/~eprint/forms/quota.php</string>
    <string name="quota_login_url">https://mysoc.nus.edu.sg/images/LOGIN</string>
    <string name="quota_page_relative_url">/~eprint/forms/quota.php</string>
    <string name="quota_refresh_text">Refreshing Print Quota&#8230;</string>
    <string name="quota_no_network">No network connection or mysoc site unreachable.</string>
    <string name="quota_wrong_credentials">Username or password incorrect.</string>
    
    <string name="about_box_text">NUS SOC Print v0.54\nMIT license\nBuild Date: 19 Mar 2014\nBy: Yeo Kheng Meng (yeokm1@gmail.com)\nWith thanks to Yong Quan, Kai Yao, Gabriel and Jason\n\nSource Code: \nhttps://github.com/yeokm1/nus-soc-print\n\nWrite-up:\nhttp://yeokhengmeng.com/2013/03/nus-soc-print-android-app\n\n</string>
    <string name="help_text">NUS SOC Print v0.54\nMIT license\nBuild Date: 19 Mar 2014\nBy: Yeo Kheng Meng (yeokm1@gmail.com)\n
\nWhich file formats are supported?\n
PDF, DOCX, ODT, DOC, PPTX and PPT in order of reliability. Printing MS office documents requires an external java program download by the app to your Sunfire account.\n        
        
\nWhat is \"Clear Server Cache\"?\n
Clears temporary files in the socPrint directory in your Unix account. You are advised to clear regularly to prevent filename conflicts.\n

\nWhat is \"Reset connection\"?\n
If the app\'s SSH connection is unresponsive, this is the button to hit. It will also terminate any active SSH operations.\n
       
\nWhich method to pick?\n\n
Method 1 (From v0.22)\n
GOOD: A4 files. Fast and reliable.\n
BAD: Slides\n\n

Method 2\n 
GOOD: Slides. Intuitive auto-layout that decides portrait/landscape very well.\n
BAD: *1.2MB jar program initial upload to Sunfire. PDFs saved with incorrect page properties may not come out properly.\n\n

Method 3:\n
Good: All-rounder\n
BAD: *2.6MB jar program initial upload to Sunfire. Permanent Portrait layout. Some PDFs cannot be processed (properly). If file does not print, please try other options or M2. Col x Row option aligns frames to the left.\n\n

*Unless you clear the cache, the upload will only take place the first time you use the method. Subsequent print jobs will not need to upload this jar program.\n</string>

</resources>